<resources>
    <string name="title">BonAppetit</string>
    <string name="titleVenner">Ny venn</string>
    <string name="titleVennerList">Alle venner</string>
    <string name="titleRestauranter">Ny restaurant</string>
    <string name="titleRestauranterList">Alle restauranter</string>
    <string name="titleBestillBord">Bestill bord</string>
    <string name="titleBestillBordList">Bestillinger</string>
    <string name="titlePreferanser">Preferanser</string>
    <string name="restauranter">Restauranter</string>
    <string name="venner">Venner</string>
    <string name="hintName">Skriv inn navn</string>
    <string name="hintPhone">Skriv inn telefonnummer</string>
    <string name="hintAddress">Skriv inn adresse</string>
    <string name="hintType">Velg type restaurant</string>
    <string name="hintAntallVenner">Antall venner valgt: %1$d</string>
    <string-array name="RestaurantTypes">
        <item>Velg type restaurant</item>
        <item>Amerikansk</item>
        <item>Asiatisk</item>
        <item>Italiensk</item>
        <item>Kinesisk</item>
        <item>Thai</item>
    </string-array>
    <string name="hintTime">Skriv inn tidspunkt for SMS</string>
    <string name="hintSMS">SMS og varsler av/på</string>
    <string name="titleEditVenn">Endre venn</string>
    <string name="titleEditRestaurant">Endre restaurant</string>
    <string name="save">Lagre</string>
    <string name="cancel">Avbryt</string>
</resources>